# MLOps-lab

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  inference.py  main.py  model.pkl  public_key.asc  pyproject.toml  secrets.yaml  settings.py  test_app.py  training.py
.config/: .env.test
tests/: test_app.py  test_main.py  test_settings.py
